--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,8 @@
 @import 'base/globals';
 @import 'base/fonts';
 
+// Packages
+@import 'node_modules/highlight.js/scss/dracula.scss';
+
 // Layout
 @import 'layouts/main';
